--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,76 @@
 /* custom  ----------------------------------------------------------------------------------------------- */
+
+/* cursor */
+* {
+  cursor: none !important;
+}
+
+.cursor {
+  width: 25px;
+  height: 25px;
+  border-radius: 100%;
+  border: 1px solid rgb(15, 37, 132);
+  transition: all 200ms ease-out;
+  position: fixed;
+  pointer-events: none;
+  left: 0;
+  top: 0;
+  transform: translate(calc(-50% + 15px), -50%);
+  z-index: 10000;
+}
+
+.cursor2 {
+  width: 5px;
+  height: 5px;
+  border-radius: 100%;
+  background-color: #2c3e50;
+  opacity: .5;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  transition: width .3s, height .3s, opacity .3s;
+  z-index: 100000;
+}
+
+.hover {
+  background-color: white;
+  border: none;
+  opacity: 0.8;
+}
+
+.cursorinnerhover {
+  width: 25px;
+  height: 25px;
+  opacity: .6;
+}
+/* fin cursor */
+
+
+
+.masthead {
+  padding-top: calc(6rem + 74px);
+  padding-bottom: 3rem;
+}
+
+@media screen and (min-width: 992px) {
+  #mainNav .navbar-nav>li.nav-item>a.nav-link.active {
+    color: #fff;
+    background: none !important;
+  }
+
+  a.nav-link.active::after {
+    content: '';
+    border-bottom: 3px solid #004aad;
+    display: block;
+  }
+}
+
+
+.hero-text {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 .timeline {
   list-style: none;
   padding: 20px 0 20px;
@@ -371,10 +443,29 @@
 }
 
 .text-nvo {
-  color: #28243c!important;
+  color: #28243c !important;
 }
 
 .text-epoka {
   color: #553986 !important;
 }
 
+.bg-mfr {
+  background-color: #ceab5d !important;
+}
+
+.text-mfr {
+  color: #ceab5d !important;
+}
+
+.border-left {
+  border-left: rgba(33, 37, 41, 0.25) 0.125rem solid ;
+}
+
+.bg-timc {
+  background-color: #0101a3!important;
+}
+
+.text-timc {
+  color: #0101a3 !important;
+}
