--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@
   height: 25px;
   opacity: .6;
 }
+
 /* fin cursor */
 
 
@@ -65,6 +66,21 @@
   }
 }
 
+@media screen and (max-width: 991px) {
+  .masthead {
+    padding-top: 8rem !important;
+    padding-bottom: 3rem;
+  }
+
+  #mainNav .navbar-toggler {
+    font-size: 80%;
+    padding: 0rem;
+  }
+
+  .page-section {
+    padding: 3rem 0;
+  }
+}
 
 .hero-text {
   text-align: justify;
@@ -459,11 +475,11 @@
 }
 
 .border-left {
-  border-left: rgba(33, 37, 41, 0.25) 0.125rem solid ;
+  border-left: rgba(33, 37, 41, 0.25) 0.125rem solid;
 }
 
 .bg-timc {
-  background-color: #0101a3!important;
+  background-color: #0101a3 !important;
 }
 
 .text-timc {
@@ -471,8 +487,10 @@
 }
 
 a button {
-  color: inherit; /* blue colors for links too */
-  text-decoration: inherit; /* no underline */
+  color: inherit;
+  /* blue colors for links too */
+  text-decoration: inherit;
+  /* no underline */
 }
 
 .modal-content {
