--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@
 
 @media screen and (min-width: 992px) {
   #mainNav .navbar-nav>li.nav-item>a.nav-link.active {
-    color: #fff;
+    color: #004aad !important;
     background: none !important;
   }
 
